# Tesis

./: .gitignore  CMakeLists.txt  _GENERATE_VS2019_x86.bat  cmake_install.cmake
src/: CMakeLists.txt  cmake_install.cmake  main.cpp
src/Calibration_ring/: camera_calibration.h  camera_calibration_ring.h  main_calibration_ring.cpp  next_pose.h
